@@ -7,7 +7,6 @@ import java.lang.invoke.MethodHandles;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -34,7 +33,6 @@ import org.folio.inventory.support.http.client.Response;
 import org.folio.inventory.support.http.server.ServerErrorResponse;
 
 import io.vertx.core.http.HttpClient;
-import io.vertx.core.json.Json;
 import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 import org.apache.logging.log4j.LogManager;
@@ -71,11 +69,11 @@ public abstract class AbstractInstances {
     CollectionResourceClient relatedInstancesClient = createInstanceRelationshipsClient(
       routingContext, context);
     CollectionResourceRepository relatedInstancesRepository = new CollectionResourceRepository(relatedInstancesClient);
-    List<String> instanceId = Arrays.asList(instance.getId());
+    List<String> instanceId = List.of(instance.getId());
     String query = createQueryForRelatedInstances(instanceId);
 
     CompletableFuture<Response> future = new CompletableFuture<>();
-    relatedInstancesClient.getMany(query, future::complete);
+    relatedInstancesClient.getAll(query, future::complete);
 
     return future.thenCompose(result ->
       updateInstanceRelationships(instance, relatedInstancesRepository, result));
@@ -134,11 +132,11 @@ public abstract class AbstractInstances {
     CollectionResourceRepository precedingSucceedingTitlesRepository =
       new CollectionResourceRepository(precedingSucceedingTitlesClient);
 
-    List<String> instanceId = Arrays.asList(instance.getId());
+    List<String> instanceId = List.of(instance.getId());
     String query = createQueryForPrecedingSucceedingInstances(instanceId);
 
     CompletableFuture<Response> future = new CompletableFuture<>();
-    precedingSucceedingTitlesClient.getMany(query, future::complete);
+    precedingSucceedingTitlesClient.getAll(query, future::complete);
 
     return future.thenCompose(result ->
       updatePrecedingSucceedingTitles(instance, precedingSucceedingTitlesRepository, result));
@@ -257,7 +255,7 @@ public abstract class AbstractInstances {
    *
    * @param instancesResponse Set of Instances to transform to representations
    * @param context
-   * @return
+   * @return Result set as JSON object
    */
   protected JsonObject toRepresentation(InstancesResponse instancesResponse,
     WebContext context) {
@@ -342,7 +340,7 @@ public abstract class AbstractInstances {
 
   protected String createQueryForPrecedingSucceedingInstances(List<String> instanceIds) {
     String idList = instanceIds.stream().distinct().collect(Collectors.joining(" or "));
-    return format("query=succeedingInstanceId==(%s)+or+precedingInstanceId==(%s)", idList, idList);
+    return format("succeedingInstanceId==(%s) or precedingInstanceId==(%s)", idList, idList);
   }
 
   protected <T> CompletableFuture<List<T>> allResultsOf(
@@ -355,7 +353,7 @@ public abstract class AbstractInstances {
 
   protected String createQueryForRelatedInstances(List<String> instanceIds) {
     String idList = instanceIds.stream().distinct().collect(Collectors.joining(" or "));
-    return format("query=subInstanceId==(%s)+or+superInstanceId==(%s)", idList, idList);
+    return format("subInstanceId==(%s) or superInstanceId==(%s)", idList, idList);
   }
 
   protected OkapiHttpClient createHttpClient(
